Java 17 back fixes